<resources>
    <string name="app_name">PICT</string>
    <string name="welcome">WELCOME</string>
    <string name="email">EMAIL</string>
    <string name="pass">PASSWORD</string>
    <string name="signin">SIGN_IN</string>
    <string name="signup">REGISTER</string>
    <string name="forgotPass">FORGOT_PASSSWORD?</string>
    <string name="name">NAME</string>
    <string name="Contact">MOBILE_NO</string>
    <string name="Class">CLASS</string>
    <string name="Roll">ROLL_NO</string>
    <string name="div">BATCH</string>
    <string name="dpt">DEPARTMENT</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="reg">REGISTRATION</string>
    <string name="reset">RESET PASSWORD</string>
    <string name="emailenter">Enter your mail Id</string>
    <string name="back">BACK</string>
    <string name="emailresest">RESET PASSWORD</string>
    <string name="sendpass">SEND PASSWORD ON EMAIL</string>
    <string name="action_settings">Settings</string>
    <string name="att">ATTENDANCE</string>
    <string name="lost">LOST_FOUND</string>
    <string name="help">HELP</string>
    <string name="event">EVENT</string>
    <string name="event_name">EVENT NAME</string>
    <string name="topic">TOPIC</string>
    <string name="conduct">CONDUCTOR</string>
    <string name="venue">VENUE</string>
    <string name="time">TIME</string>
    <string name="desc">ABOUT EVENT</string>
    <string name="save">SAVE</string>
    <string name="date">DATE</string>
    <string name="a31437"></string>
    <string name="a31438"></string>
    <string name="a31439"></string>
    <string name="a31440"></string>
    <string name="a31441"></string>
    <string name="a31442"></string>
    <string name="a31443"></string>
    <string name="a31444"></string>
    <string name="a31445"></string>
    <string name="a31446"></string>
    <string name="a31447"></string>
    <string name="a31448"></string>
    <string name="a31449"></string>
    <string name="a31450"></string>
    <string name="a31451"></string>
    <string name="a31452"></string>
    <string name="a31453"></string>
    <string name="a31454"></string>
    <string name="place"></string>
    <string name="description"></string>
    <string name="time1"></string>
    <string name="date1"></string>
    <string name="color"></string>
    <string name="no"></string>
    <string name="object"></string>


</resources>
